c4prj2_input/grade.txt
Grading at Sat Aug  3 01:28:17 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:12:55: error: empty character constant
       if(str[i] == '\n' || str[i] == ' ' || str[i] == ''){continue;}
                                                       ^
input.c:18:65: error: empty character constant
            while(!(str[i] == '\n' || str[i] == ' ' || str[i] == '')) {
                                                                 ^
Compilation of input.c failed

Overall Grade: F
